conformance/tests/httproute-rewrite-host-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rewrite-host
  namespace: gateway-conformance-infra
spec:
  hostnames:
    - "rewrite.example"
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /one
      backendRefs:
        - name: infra-backend-v1
          port: 8080
          filters:
            - type: URLRewrite
              urlRewrite:
                hostname: one.example.org
    - backendRefs:
        - name: infra-backend-v2
          port: 8080
        - filters:
            - type: URLRewrite
              urlRewrite:
                hostname: example.org
